@@ -48,7 +48,6 @@ class ConfigManager(object):
             'client.toolbar': 'default',
             'client.save_width_height': True,
             'client.save_tree_state': True,
-            'client.fast_tabbing': True,
             'client.spellcheck': False,
             'client.lang': locale.getdefaultlocale()[0],
             'client.language_direction': 'ltr',
