@@ -10,7 +10,6 @@ from gi.repository import Gdk, Gtk
 from tryton.common import common
 from tryton.common import file_selection, Tooltips, file_open, file_write
 from tryton.common.entry_position import reset_position
-from tryton.config import CONFIG
 from .widget import Widget
 
 _ = gettext.gettext
@@ -178,10 +177,6 @@ class Binary(BinaryMixin, Widget):
         self.but_clear.set_sensitive(not value)
         if self.wid_text:
             self.wid_text.set_editable(not value)
-        if value and CONFIG['client.fast_tabbing']:
-            self.widget.set_focus_chain([])
-        else:
-            self.widget.unset_focus_chain()
 
     def sig_key_press(self, widget, event, *args):
         editable = self.wid_text and self.wid_text.get_editable()
