@@ -2,7 +2,6 @@
 # this repository contains the full copyright notices and license terms.
 from gi.repository import Gtk
 
-from tryton.config import CONFIG
 from tryton.common.entry_position import reset_position
 from .widget import Widget
 
@@ -48,7 +47,3 @@ class TimeDelta(Widget):
     def _readonly_set(self, value):
         super(TimeDelta, self)._readonly_set(value)
         self.entry.set_editable(not value)
-        if value and CONFIG['client.fast_tabbing']:
-            self.widget.set_focus_chain([])
-        else:
-            self.widget.unset_focus_chain()
