@@ -1,3 +1,5 @@
+* Remove Fast Tabbing option
+* Remove usage of focus_chain
 * Add shortcuts for switch and remove on One2Many
 * Rename roundup.url configuration to bug.url
 * Remove send error to bug tracker
